--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -31,7 +31,7 @@ $azulosc:rgba(15, 129, 139);
 @import "productos";
 @import "encontranos";
 @import "sobre nosotros";
-@import "pedido";
+@import "pedidos";
 @import "mediaquery";     
 
 * {
