--- a/css/estilo.css
+++ b/css/estilo.css
@@ -902,13 +902,15 @@ main .irAPedidos .boton:hover {
   grid-area: horarios;
   background-image: url(../images/generales/papel.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   margin-left: 2rem;
+  padding-bottom: 1.25rem;
 }
 .bodyEncontranos .mainIndex .encontranos .horarios h2 {
   font-family: "Belanosima" sans-serif;
@@ -924,7 +926,7 @@ main .irAPedidos .boton:hover {
   font-family: "Edu VIC WA NT Beginner";
   font-weight: 300;
   font-style: normal;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-align: center;
   color: rgb(244, 242, 235);
   margin: 0;
@@ -933,13 +935,15 @@ main .irAPedidos .boton:hover {
   grid-area: trabaja;
   background-image: url(../images/generales/papel2.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   margin-left: 3.12rem;
+  padding-bottom: 1.25rem;
 }
 .bodyEncontranos .mainIndex .encontranos .trabaja h2 {
   font-family: "Belanosima" sans-serif;
@@ -1150,6 +1154,10 @@ body .mainIndex .pedidos .formularioPedidos .formularios .formIzquierda {
   align-items: center;
   margin: 20px;
 }
+body .mainIndex .pedidos .formularioPedidos .formularios .formIzquierda input {
+  border: none;
+  border-radius: 10px;
+}
 body .mainIndex .pedidos .formularioPedidos .formularios .formDerecha {
   display: flex;
   flex-direction: column;
@@ -1157,6 +1165,14 @@ body .mainIndex .pedidos .formularioPedidos .formularios .formDerecha {
   justify-content: space-around;
   align-items: center;
   margin: 20px;
+}
+body .mainIndex .pedidos .formularioPedidos .formularios .formDerecha input {
+  border: none;
+  border-radius: 10px;
+}
+body .mainIndex .pedidos .formularioPedidos .formularios .formDerecha textarea {
+  border: none;
+  border-radius: 10px;
 }
 body .mainIndex .pedidos .formularioPedidos .formularios .formDerecha button {
   font-family: "Edu VIC WA NT Beginner";
@@ -1257,7 +1273,7 @@ body .mainIndex .pedidos .suscribite h2 {
   font-style: normal;
   font-size: 40px;
   text-align: center;
-  color: rgb(244, 214, 217);
+  color: rgb(68, 145, 111);
   font-family: "Belanosima", sans-serif;
   padding-top: 10px;
 }
@@ -1280,7 +1296,7 @@ body .mainIndex .pedidos .suscribite .sFormulario form {
   font-style: normal;
   font-size: 22px;
   text-align: center;
-  color: rgb(244, 214, 217);
+  color: rgb(68, 145, 111);
 }
 body .mainIndex .pedidos .suscribite .sFormulario button {
   font-family: "Edu VIC WA NT Beginner";
@@ -1682,13 +1698,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     transition: transform 0.3s;
   }
   body footer .logoFooter {
-    width: 120px;
-    height: 120px;
-    margin-left: 130px;
-  }
-  body footer .logoFooter:hover {
-    transform: scale(1.2);
-    transition: transform 0.3s;
+    display: none;
   }
   body footer .redesSociales {
     display: flex;
@@ -2429,6 +2439,96 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     transform: scale(1.1);
   }
   /* Fin pedidos 420 */
+}
+/* Media query 420 */
+@media screen and (min-width: 1760px) {
+  /*seccion productos*/
+  main .tiposDeProductosBox .listaImagenes {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 26.25rem;
+    margin-right: 18rem;
+    margin-top: -13.75rem;
+  }
+  main .tiposDeProductosBox .listaImagenes li {
+    text-align: center;
+  }
+  main .tiposDeProductosBox .listaImagenes li a {
+    text-decoration: none;
+  }
+  main .tiposDeProductosBox .listaImagenes li .cateletra {
+    font-family: "Belanosima" sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+    text-align: center;
+    color: rgb(68, 145, 111);
+    font-family: "Belanosima", sans-serif;
+  }
+  main .tiposDeProductosBox .listaImagenes li .produc {
+    width: auto;
+    height: 250px;
+    margin: 15px;
+  }
+  main .tiposDeProductosBox .listaImagenes li .produc:hover {
+    transform: scale(1.1);
+  }
+  /*index*/
+  /*body box*/
+  body .mainIndex {
+    /* Cards */
+  }
+  body .mainIndex .tarjetaVisita {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    height: 62.5rem;
+    background-image: url(../images/generales/hoja2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .mainIndex .tarjetaVisita img {
+    width: 15rem;
+  }
+  body .mainIndex .tarjetaVisita #card1 {
+    transform: rotate(1deg) translateY(30px);
+    margin-left: 4rem;
+  }
+  body .mainIndex .tarjetaVisita #card2 {
+    transition: box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  }
+  body .mainIndex .tarjetaVisita #card3 {
+    transform: rotate(-2deg) translateY(12px);
+  }
+  body .mainIndex .tarjetaVisita .card {
+    background-color: rgb(68, 145, 111);
+    width: 15rem;
+    height: 25rem;
+    margin: 1.25rem;
+    margin-top: -6rem;
+    box-shadow: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.7);
+  }
+  body .mainIndex .tarjetaVisita .card .btn-custom {
+    background-color: rgb(178, 217, 196);
+    font-family: "Belanosima" sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.25rem;
+    text-align: center;
+    color: rgb(68, 145, 111);
+    font-family: "Belanosima", sans-serif;
+  }
+  body .mainIndex .tarjetaVisita .card .btn-custom:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+  }
+  /*fin-index*/
 }
 * {
   margin: 0;
