--- a/scss/_encontranos.scss
+++ b/scss/_encontranos.scss
@@ -86,16 +86,18 @@
                 grid-area: horarios;
                 background-image: url(../images/generales/papel.png);
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size: contain;
+                background-position: center;
                 @include dFlex (flex, column, nowrap, center, center);
                 margin-left: 2rem;
+                padding-bottom: 1.25rem;
                 h2 {
                     @include text ("Belanosima" sans-serif , 500, normal, 2.5rem, center, $celesteclaro);
                     font-family: "Belanosima", sans-serif;
                     margin-top: 1rem;
                 }
                 p {
-                    @include text ("Edu VIC WA NT Beginner", 300, normal, 1.8rem, center, $blancoamarillo);
+                    @include text ("Edu VIC WA NT Beginner", 300, normal, 1.5rem, center, $blancoamarillo);
                     margin: 0;
                 }
             }
@@ -104,9 +106,11 @@
                 grid-area: trabaja;
                 background-image: url(../images/generales/papel2.png);
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size: contain;
+                background-position: center;
                 @include dFlex (flex, column, nowrap, center, center);
-                margin-left: 3.12rem;
+                margin-left: 3.12rem;   
+                padding-bottom: 1.25rem;            
                 h2 {
                     @include text ("Belanosima" sans-serif , 300, normal, 2.5rem, center, $naranjacla );
                     font-family: "Belanosima", sans-serif;
