--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1442,6 +1442,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     text-align: center;
     color: rgb(244, 242, 235);
     padding: 8px;
+    margin-top: 15px;
     margin-bottom: 0px;
   }
   body .mainIndex .pedidosBoxs {
@@ -1725,6 +1726,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     transform: scale(1.2);
   }
   /*fin media query index 420px*/
+  /*media query productos 420px*/
   main {
     /*seccion guia de pedidos*/
     /*seccion grupo de productos*/
@@ -1975,7 +1977,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
   }
   body .mainIndex .sobreNosotros .tituloSN {
     grid-area: tituloSN;
-    max-width: 100%;
+    max-width: 100vw;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -2003,16 +2005,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     margin-right: 0;
     padding: 20px;
     box-shadow: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.7);
-    max-width: 100%;
-  }
-  body .mainIndex .sobreNosotros .franjaV .chinche1 {
-    display: none;
-  }
-  body .mainIndex .sobreNosotros .franjaV .chinche2 {
-    display: none;
-  }
-  body .mainIndex .sobreNosotros .franjaV .chinche3 {
-    display: none;
+    max-width: 100vw;
   }
   body .mainIndex .sobreNosotros .texto1 {
     grid-area: texto1;
@@ -2040,6 +2033,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     color: rgb(244, 242, 235);
     font-family: "Belanosima", sans-serif;
     padding: 8px;
+    max-width: 100vw;
   }
   body .mainIndex .sobreNosotros .texto2 .textoLimitado {
     font-family: "Edu VIC WA NT Beginner";
@@ -2166,7 +2160,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    margin-left: 0.3rem;
+    margin-left: 1.3rem;
     max-width: 90%;
     margin-right: 1rem;
     padding-left: 0px;
@@ -2200,7 +2194,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    margin-left: 0.3rem;
+    margin-left: 1.3rem;
     max-width: 90%;
   }
   .bodyEncontranos .mainIndex .encontranos .trabaja h2 {
@@ -2451,7 +2445,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     justify-content: center;
     align-items: center;
     margin-left: 26.25rem;
-    margin-right: 18rem;
+    margin-right: 20rem;
     margin-top: -13.75rem;
   }
   main .tiposDeProductosBox .listaImagenes li {
@@ -2529,6 +2523,38 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     transition: transform 0.3s;
   }
   /*fin-index*/
+  .bodyEncontranos .mainIndex .encontranos {
+    /* Horarios */
+    /* Trabaja con nosotros */
+  }
+  .bodyEncontranos .mainIndex .encontranos .horarios {
+    grid-area: horarios;
+    background-image: url(../images/generales/papel.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2rem;
+    padding-bottom: 1.25rem;
+  }
+  .bodyEncontranos .mainIndex .encontranos .trabaja {
+    grid-area: trabaja;
+    background-image: url(../images/generales/papel2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-left: 3.12rem;
+    padding-bottom: 1.25rem;
+  }
 }
 * {
   margin: 0;
