--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -121,6 +121,7 @@ body {
               .boton{
                    @include text ("Belanosima" sans-serif , 400, normal, 20px, center, $blancoamarillo );
                    padding: 8px;
+                   margin-top: 15px;
                    margin-bottom: 0px;
                 }
             }
@@ -335,7 +336,7 @@ body {
     }
 }
 /*fin media query index 420px*/
-
+/*media query productos 420px*/
 main{
     .tituloProductosBox{
         .tituloProductos{  
@@ -523,7 +524,7 @@ body{
             /* Título 'Sobre nosotros' */
             .tituloSN { 
                 grid-area: tituloSN; 
-                max-width: 100%;
+                max-width: 100vw;
                 @include dFlex (flex, row, nowrap, center, center);
                 background-color:$naranjamed;
                 h2 {
@@ -539,16 +540,7 @@ body{
                 margin-right:0;
                 padding: 20px;
                 box-shadow: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.7);
-                max-width: 100%;
-                .chinche1{
-                    display: none;
-                }
-                .chinche2{
-                    display: none;
-                }
-                .chinche3{
-                    display: none;
-                }
+                max-width: 100vw;
             }
             /* Texto introductorio */
             .texto1 { 
@@ -566,6 +558,7 @@ body{
                     @include text ("Belanosima" sans-serif , 400, normal, 40px, center, $blancoamarillo);
                     font-family: "Belanosima", sans-serif;
                     padding: 8px;
+                    max-width: 100vw;
                 }
                 .textoLimitado {
                     @include text ("Edu VIC WA NT Beginner", 200, normal, 20px, center, $azulosc);
@@ -667,8 +660,7 @@ body{
                 background-repeat: no-repeat;
                 background-size: cover;
                 @include dFlex (flex, column, nowrap, center, center);
-                margin-left:0.3rem;
-                max-width: 90%;
+                margin-left:1.3rem;                max-width: 90%;
                 margin-right: 1rem;
                 padding-left: 0px;
                 h2 {
@@ -688,7 +680,7 @@ body{
                 background-repeat: no-repeat;
                 background-size: cover;
                 @include dFlex (flex, column, nowrap, center, center);
-                margin-left:0.3rem;
+                margin-left:1.3rem;
                 max-width: 90%;
                 h2 {
                     @include text ("Belanosima" sans-serif , 300, normal, 30px, center, $naranjacla );
@@ -850,7 +842,7 @@ main{
             list-style: none;
             @include dFlex (flex, row, wrap, center, center);
             margin-left: 26.25rem;
-            margin-right: 18rem;
+            margin-right: 20rem;
             margin-top: -13.75rem;
             li{
                 text-align: center;
@@ -919,4 +911,36 @@ body {
     }
 }
 /*fin-index*/
+.bodyEncontranos {
+    .mainIndex {
+        .encontranos {
+          
+            /* Horarios */
+            .horarios {
+                grid-area: horarios;
+                background-image: url(../images/generales/papel.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                @include dFlex (flex, column, nowrap, center, center);
+                margin-left: 2rem;
+                padding-bottom: 1.25rem;
+
+            }
+            /* Trabaja con nosotros */
+            .trabaja {
+                grid-area: trabaja;
+                background-image: url(../images/generales/papel2.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                @include dFlex (flex, column, nowrap, center, center);
+                margin-left: 3.12rem;   
+                padding-bottom: 1.25rem;            
+                
+            }
+        }
+    } 
+}
+
 }
