--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2164,6 +2164,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     max-width: 90%;
     margin-right: 1rem;
     padding-left: 0px;
+    margin-bottom: 3rem;
   }
   .bodyEncontranos .mainIndex .encontranos .horarios h2 {
     font-family: "Belanosima" sans-serif;
@@ -2445,7 +2446,7 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     justify-content: center;
     align-items: center;
     margin-left: 26.25rem;
-    margin-right: 20rem;
+    margin-right: 22rem;
     margin-top: -13.75rem;
   }
   main .tiposDeProductosBox .listaImagenes li {
